# codi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: check.yml
docker/: entrypoint.sh
scripts/: install_macos_launchd.sh  restart.sh  uninstall_macos_launchd.sh
scripts/git-hooks/: pre-push
src/codexbot/: __init__.py  bot.py  config.py  main.py  markdown_v2.py  monitor_state.py  screenshot.py  session.py  session_monitor.py  skill_hints.py  skills.py  slash_commands.py  telegram_sender.py  terminal_parser.py  tmux_manager.py  transcript_parser.py  utils.py
src/codexbot/handlers/: callback_data.py  directory_browser.py  interactive_ui.py  message_queue.py  message_sender.py  response_builder.py  status_polling.py
src/codexbot/runtimes/: __init__.py  base.py  (+2 more)
tests/: conftest.py
tests/codexbot/: conftest.py  test_config.py  test_forward_command.py  test_markdown_v2.py  test_monitor_state.py  test_screenshot.py  test_session.py  test_session_monitor.py  test_skill_buttons.py  test_skill_hints.py  test_skills.py  test_slash_commands.py  test_telegram_sender.py  test_terminal_parser.py  test_transcribe.py  test_transcript_parser.py  test_utils.py  test_web_api.py  test_web_auth.py  test_web_events.py  test_web_server.py  test_web_streaming.py
tests/integration/: test_config_integration.py  test_monitor_state_integration.py
web-ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  api.ts  main.tsx  styles.css  ws.ts
(+30 files in other folders)
